# dawn-stdlib-android

./: Cargo.toml  README.md  build.sh
src/: crypto.rs  handles.rs  init.rs  lib.rs  macros.rs  messaging.rs
